# earthstat

./: 404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs.yml  installation.yml
analysis_aggregation/: index.html
changelog/: index.html
contributing/: index.html
data_compatibility/: data_compatibility.md  index.html
data_converter/: data_converter.md  index.html
docs/: analysis_aggregation.md  common.md  contributing.md  geo_meta_extractor.md  index.md  installation.md  usage.md  utils.md
docs/examples/: intro.ipynb  xES.ipynb
docs/usage/: main_usage.md  xES_usage.md
earthstat/: __init__.py  earthstat.md  earthstat.py  index.html  utils.py  xearthstat.py
earthstat/analysis_aggregation/: aggregate_process.py  parallel_clip_aggregate.py  process_comp_issues.py
earthstat/data_compatibility/: compatibility_utils.py  data_compatibility.py  process_comp_issues.py
earthstat/data_converter/: hdf5_to_tiff.py  netcdf_to_tiff.py
earthstat/data_processing/: data_loader.py
earthstat/geo_data_processing/: clip_raster.py  rescale_resample_raster.py  shapefile_process.py
earthstat/geo_meta_extractors/: mask_meta.py  predictor_meta.py  shapefile_meta.py
earthstat/geooperations/: clip_raster.py  rescale_resample_raster.py  shapefile_process.py
earthstat/xES/: DailyDatasetBuilder.py  DekadalDatasetBuilder.py  cds_api_key_manager.py  cds_param.py  download_AgERA5py.py  get_csv.py  xES_utiles.py
examples/intro/: index.html  intro.ipynb
examples/xES/: index.html  xES.ipynb
faq/: index.html
geo_data_processing/: geo_data_processing.md  index.html
geo_meta_extractor/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_earthstat.py
usage/main_usage/: index.html
usage/xES_usage/: index.html  xES_usage.md
utils/: index.html
