[project]
name = "earthstat"
version = "0.7.0"
dynamic = [
    "dependencies",
]
description = "EarthStat Library"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "earthstat",
]
license = {text = "MIT License"}
authors = [
  {name = "Abdelrahman Saleh", email = "abdulrahman.amr.ali@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
earthstat = "earthstat.cli:main"

[project.optional-dependencies]
all = [
    "earthstat[extra]",
]

extra = [
    "pandas",
]

gpu = [
    "cupy",
]

[tool]
[tool.setuptools.packages.find]
include = ["earthstat*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.7.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "earthstat/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/AbdelrahmanAmr3/earthstat"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
